use java 8, change equals, hashCode in class Resume